Prevent "invisible" text-overflow at the end of a collapsed object
Appears to happen only in Firefox, and not Edge, for example.  If the
last value of a collapsed object, that is otherwise fully visibile on
screen, is a link - the hidden quote at the end causes text-overflow
and ellipsis shown.

--- a/src/viewer.css
+++ b/src/viewer.css
@@ -99,6 +99,11 @@ li {
   :not(.q, .collapser) {
     display: inline;
   }
+  /* XXX: Prevent "invisible" text-overflow
+   * at the end of a collapsed object. */
+  :last-child > :not(.quoted):last-child > .q:last-child {
+    direction: rtl;
+  }
 }
 
 .collapsed > .collapsible {
